--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@golevelup/nestjs-common": "^3.0.0",
     "@itgorillaz/configify": "^4.0.1",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.0",
     "class-validator": "^0.14.2",
-    "drizzle-kit": "1.0.0-beta.1-c0277c0",
+    "dotenv": "^17.2.1",
     "drizzle-orm": "1.0.0-beta.1-c0277c0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
@@ -48,7 +49,7 @@
     "@types/node": "^22.10.7",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.2",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^1.0.0-beta.1-c0277c0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
