--- a/apps/admin/tsconfig.app.json
+++ b/apps/admin/tsconfig.app.json
@@ -1,10 +1,28 @@
+/////tscongif.app.ts
+// {
+//   "extends": "../../tsconfig.json",
+//   "compilerOptions": {
+//     "outDir": "../../dist/apps/admin",
+//     "rootDir": "./src"
+//   },
+//   "include": ["src/**/*.ts"],
+//   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+// }
 
+// apps/admin/tsconfig.app.json
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/apps/admin",
-    "rootDir": "./src"
+    "outDir": "../../dist/apps/admin"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../../libs/db/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test",
+    "**/*.spec.ts"
+  ]
 }
